--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -52,8 +52,9 @@
 
 .column {
   flex: 50%;
+  // width: 500px
   // padding: 10px;
-  height: 325px;
+  // height: 325px;
   // border: 1px solid red;
   
   // font-size: 25px;
@@ -66,7 +67,7 @@
   font-size: 70px;
   width: 550px;
   margin: 0 auto;
-  font-family: gt-super, Georgia, Cambria, "Times New Roman", Times, serif;
+  // font-family: gt-super, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .splash-sub-header{
@@ -82,13 +83,13 @@
 .trending-div{
   border-bottom: solid 1px rgb(221, 221, 221);
   height: 344px;
-  padding-top: 60px;
-  padding-bottom: 16px;
+  padding-top: 35px;
+  padding-bottom: 40px;
  
 }
 
 .trending-story-box{
-  border: solid 1px red;
+  // border: solid 1px red;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -102,10 +103,11 @@
 
 .trending-on-shmedium{
   letter-spacing: .5px;
+  padding-left: 10px
 }
 
 .story{
-  border: solid 1px blue;
+  // border: solid 1px blue;
   height: 100px;
   width: 30%;
   font-size: 16px;
@@ -141,7 +143,7 @@
 }
 
 .trending-on{
-  border: solid 1px red;
+  // border: solid 1px red;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -150,7 +152,7 @@
   margin: 0 auto;
   font-size:12px;
   font-weight: bold;
-  margin-bottom: 16px;
+  padding-bottom: 15px;
   font-family: Arial, Helvetica, sans-serif;
   height: 30px;
 }
